--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,7 +14,7 @@ jobs:
       contents: write
       packages: write
     with:
-      upstream_version: "fix-nodemailer"
+      upstream_version: "add-env-for-mastodon"
       upstream_repo: "https://github.com/halkeye/gathio"
       checkout_upstream_repo: "halkeye/gathio"
       run_number: "${{ github.run_number }}"
