use different dockerfile

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -15,8 +15,9 @@ jobs:
       packages: write
     with:
       upstream_version: "add-env-for-mastodon"
-      upstream_repo: "https://github.com/halkeye/postiz-app"
+      upstream_repo: "https://github.com/gitroomhq/postiz-app"
       checkout_upstream_repo: "halkeye/postiz-app"
+      dockerfile: "Dockerfile.dev"
       run_number: "${{ github.run_number }}"
       username: "${{ github.repository_owner }}"
       repository: "${{ github.repository }}"
